--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color: #f0f2f5;
+    background-color: #000000;
     color: #333;
 }
 
