--- a/style.css
+++ b/style.css
@@ -98,6 +98,11 @@ body {
     color: var(--texto-escuro);
 }
 
+/* Deixa os cards de vídeo com 100% de largura para que fiquem um debaixo do outro */
+.video-card {
+    width: 100%;
+}
+
 /* Estilo do rodapé */
 .footer {
     background-color: var(--fundo-card);
